Correct yml file typo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     name: Molecule test
     runs-on: ubuntu-latest
     strategy:
-      mastrix:
+      matrix:
         - distro: centos7
 
     steps:
