--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        - distro: centos7
+        distro: [centos7, centos8]
 
     steps:
       - name: Check out the code
