--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip3 install molecule docker yamllint ansible-lint
+        run: pip3 install molecule[docker] yamllint ansible-lint
 
       - name: Run molecule test.
         run: molecule test
