--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include app-commerce"
+    - name: "Include app-github"
       include_role:
-        name: "app-commerce"
+        name: "app-github"
